--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
 </head>
 <body>
     
+<header>
+<nav>
+    <h3>G3 Architects</h3>
 
-    
+<ul>
+    <li><a href="">home</a></li>
+    <li><a href="">About</a></li>
+    <li><a href="">Contact</a></li>
+    <li><a href="">Login</a></li>
+</ul>
+
+</nav>
+
+</header>
+
+<main>
+
+
+</main>
+
+<footer>
+
+
+</footer>
 </body>
 </html>
