--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
     
 <header>
 <nav>
-    <h3>G3 Architects</h3>
-
+    <h3 class="nav-title">G3 Architects</h3>
 <ul>
     <li><a href="">home</a></li>
     <li><a href="">About</a></li>
     <li><a href="">Contact</a></li>
     <li><a href="">Login</a></li>
 </ul>
-
 </nav>
+
+<div class="banner">
+<div class="banner-content">
+    <h1 class="banner-title">Brand New Group of Architects</h1>
+    <p class="banner-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+    <button class="btn-priymary">Explore More</button>
+
+</div>
+<img src="images/banner.png" alt="">
+
+</div>
 
 </header>
 
