--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="architectch.css">
 </head>
 <body>
-    
+    <!-- header start -->
 <header>
 <nav>
     <h3 class="nav-title">G3 Architects</h3>
@@ -23,7 +23,7 @@
 <div class="banner-content">
     <h1 class="banner-title">Brand New Group of Architects</h1>
     <p class="banner-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-    <button class="btn-priymary">Explore More</button>
+    <button class="btn-primary">Explore More</button>
 
 </div>
 <img src="images/banner.png" alt="">
@@ -31,9 +31,25 @@
 </div>
 
 </header>
-
+<!-- header end -->
 <main>
+<!-- teams sections start -->
+ <section class="teams-container">
+<div class="teams-img-container">
+<img src="images/team1.png" alt="">
+<img src="images/team2.png" alt="">
+<img src="images/team3.png" alt="">
+<img src="images/team4.png" alt="">
+</div>
+<div class="teams-content">
+<h3 class="teams-title"><span class="Quick-list">Quick list</span><span>of Our</span> <span class="text-Features">Features</span></h3>
+<p class="discription">
+    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+</p>
+<button class="btn-primary">Explore More</button>
+</div>
 
+ </section>
 
 </main>
 
