--- a/index.html
+++ b/index.html
@@ -48,8 +48,36 @@
 </p>
 <button class="btn-primary">Explore More</button>
 </div>
-
  </section>
+<!-- facts section -->
+<section class="facts">
+<h3 class="section-title">Some facts</h3>
+<p class="text-light-gary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+<div class="facts-card-container">
+<div class="card">
+    <img src="images/icons/ribon.png" alt="">
+    <h2 class="card-stats">54</h2>
+    <p class="card-title">Awards Winnigs</p>
+</div>
+<div class="card">
+    <img src="images/icons/projects.png" alt="">
+    <h2 class="card-stats">1458</h2>
+    <p class="card-title">Project Finished</p>
+</div>
+<div class="card">
+    <img src="images/icons/customers.png" alt="">
+    <h2 class="card-stats">590</h2>
+    <p class="card-title">clients Worked</p>
+</div>
+<div class="card">
+    <img src="images/icons/email.png" alt="">
+    <h2 class="card-stats">22578</h2>
+    <p class="card-title">Email Send</p>
+</div>
+
+</div>
+
+</section>
 
 </main>
 
