--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
 </main>
 
 <footer>
-
-
+<div class="footer-letter">
+    <h4 class="footer-title">All rights reserved copyright@2023 startup landing page design</h4>
+</div>
 </footer>
 </body>
 </html>
